# coinlizard

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: config.rs  handler.rs  main.rs  service.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
common/src/models/: coin.rs  mod.rs  price.rs
connectors/: Cargo.toml
connectors/src/: binance.rs  coinbase.rs  lib.rs
store/: Cargo.toml
store/src/: config.rs  error.rs  lib.rs  price_store.rs
