[workspace]
name = "coinlizard"
members = [
    "api",
    "store",
    "connectors",
    "common",
]

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
influxdb2 = "0.4"
async-trait = "0.1"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors", "trace"] } 