[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
influxdb2 = { workspace = true }
async-trait = { workspace = true } 
futures = "0.3.31"
